# basic-audio-analytics

./: CODEOWNERS  pyproject.toml
examples/: frequency_analysis_example.py  tempo_detection_example.py  vocal_processing_comparison_example.py
src/basic_audio_analytics/: __init__.py  base.py  frequency_analysis.py  tempo.py  vocal_processing_comparison.py
src/basic_audio_analytics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_tempo.py
